
TESTDATA = \
		energyB-accN-exact.parameter \
		energyB-accN-exact-seed.parameter \
		energyB-accN-heuristic.parameter \
		energyB-accN-heuristic-seed.parameter \
		energyB-accN-noLP-exact.parameter \
		energyB-accN-noLP-exact-seed.parameter \
		energyB-accN-noLP-heuristic.parameter \
		energyB-accN-noLP-heuristic-seed.parameter


EXTRA_DIST =	$(TESTDATA) $(TESTDATA:.parameter=.testresult)
