
TESTDATA = \
		energyB-accN-exact.parameter \
		energyB-accN-heuristic.parameter \
		energyB-accN-exact-seed-modelS.parameter \
		energyB-accN-exact-seed-modelX.parameter \
		energyB-accN-heuristic-seed-modelS.parameter \
		energyB-accN-heuristic-seed-modelX.parameter \
		energyB-accN-noLP-exact.parameter \
		energyB-accN-noLP-heuristic.parameter \
		energyB-accN-noLP-exact-seed-modelS.parameter \
		energyB-accN-noLP-heuristic-seed-modelS.parameter


EXTRA_DIST =	$(TESTDATA) $(TESTDATA:.parameter=.testresult)
